--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <li><a href="" class="icon alt fa-skype"><span class="label">Skype</span></a></li>
 </ul>
 <ul class="copyright">
-<li>&copy; cssrajput. All rights reserved.</li><li>Design: <a href="http://dhavalkarnatki.github.io">dhavalkarnatki</a></li>
+<li>&copy; dhavalkarnatki. All rights reserved.</li><li>Design: <a href="http://dhavalkarnatki.github.io">dhavalkarnatki</a></li>
 </ul>
 </footer>
  
